add a bit to homepage

--- a/packages/homepage/src/index.css
+++ b/packages/homepage/src/index.css
@@ -24,6 +24,12 @@ body {
   color: var(--color-white);
 }
 
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 * {
   box-sizing: border-box;
 }
