--- a/packages/homepage/src/demos/Select.css
+++ b/packages/homepage/src/demos/Select.css
@@ -2,7 +2,7 @@
   padding: 8px;
   background-color: var(--color-black);
   color: var(--color-white);
-  border: none;
+  border: 1px solid var(--color-white);
 }
 
 .Select-option {
