--- a/packages/homepage/src/App.css
+++ b/packages/homepage/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,10 +6,10 @@
 
 .App-container {
   width: 100%;
-  max-width: 900px;
+  max-width: 700px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   margin-top: 64px;
   margin-bottom: 64px;
   padding-left: 24px;
